...
            "state" : "translated",
            "value" : "内蔵プリセット"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "キャンセル"
          }
...
            "state" : "translated",
            "value" : "入力したすべてのフィルタに一致させるか、いずれかのフィルタに一致させるかを選択します。"
          }
        }
      }
    },
    "Classic" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "クラシック"
          }
...
            "state" : "translated",
            "value" : "長さ"
          }
        }
      }
    },
    "Edit Columns" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "カラムを編集"
          }
...
            "state" : "translated",
            "value" : "歌詞を編集"
          }
        }
      }
    },
    "Edit Lyrics…" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "歌詞を編集…"
          }
...
            "state" : "translated",
            "value" : "この一覧に入力済みの名前は置き換えられます。"
          }
        }
      }
    },
    "Export" : {
      "comment" : "A button that exports the list of missing titles.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "ファイル詳細"
          }
        }
      }
    },
    "File name" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ファイル名"
          }
...
            "state" : "translated",
            "value" : "ファイルサイズ"
          }
        }
      }
    },
    "Fill All Names with Timestamps" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "すべての名前をタイムスタンプで埋める"
          }
...
            "state" : "translated",
            "value" : "すべての名前をタイムスタンプで埋めますか？"
          }
        }
      }
    },
    "Fill with Timestamps" : {
      "comment" : "A button that fills in all missing media titles with timestamps.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "LED板の角"
          }
        }
      }
    },
    "LED Half" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "LEDハーフ"
          }
...
            "state" : "translated",
            "value" : "弱"
          }
        }
      }
    },
    "Lyrics" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "歌詞"
          }
...
